@@ -28,7 +28,11 @@
         <Label styleClass="boldLabel" text="PNCS Value" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <Label styleClass="boldLabel" text="Snomed ID" GridPane.columnIndex="0" GridPane.rowIndex="2" />
         <Label fx:id="snomedLabel" text="No Snomed concept entered" GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.margin="$x1" GridPane.rowIndex="3" />
-        <TextField fx:id="snomedId" maxWidth="1.7976931348623157E308" promptText="-ANY-" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <StackPane id="StackPane" fx:id="snomedIdStack" GridPane.columnIndex="1" GridPane.rowIndex="2">
+          <children>
+            <TextField fx:id="snomedId" maxWidth="1.7976931348623157E308" promptText="-ANY-" />
+          </children>
+        </StackPane>
         <HBox alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
           <children>
             <Button fx:id="clearButton" mnemonicParsing="false" text="Clear Filter">
