@@ -3,6 +3,7 @@ Lego Editor Change Log
   *  Improve error handling when snomed DB is missing
   *  Fixed deadlock that could happen if you typed in the snomed ID filter field before the Snomed
   		DB was initialized.
+  *  Properly background thread the snomed filter / search option so it can't hang the entire GUI.
   *  artf227108 Add Install4j installer script.
 
 2012/02/26 - 0.54
